--- a/sites/all/themes/ebog/css/text.css
+++ b/sites/all/themes/ebog/css/text.css
@@ -48,12 +48,14 @@ h1#page-title.title,
 #ting-search-results #ting-search-summary,
 .panel-pane.pane-views-panes.pane-user-reviews-panel-pane-1 h2.pane-title,
 .statusBox h3,
-.voxb h3 {
+.voxb h3,
+.faq-question a {
   font: 18px/28px 'DroidSerifRegular', Helvetica, Arial, sans-serif;
   font-weight: normal;
   text-transform: uppercase;
   margin-bottom: 7px;
   color: #2c2e29;
+  text-decoration: none;
 }
 
 #sidebar-first .block ul li a,
@@ -77,7 +79,8 @@ h1#page-title.title,
 .pane-faq-panel-pane-1 ul li a,
 #pager_block ul li a,
 .keywords-slider a,
-.pane-node-content a {
+.pane-node-content a,
+.details .item-list a {
   color: #5B6574;
   text-decoration: none;
 }
@@ -105,7 +108,8 @@ h1#page-title.title,
 .pane-faq-panel-pane-1 ul li a:hover,
  #pager_block ul li a:hover,
 .keywords-slider a:hover,
-.pane-node-content a:hover {
+.pane-node-content a:hover,
+.details .item-list a:hover {
   color: #1b75bc;
   text-decoration: underline;
 }
@@ -139,7 +143,8 @@ h1#page-title.title,
 #ting-search-results #ting-search-summary,
 .pane-netsound-0 h2.pane-title,
 .pane-elib-block-lastloans-6 h2.pane-title,
-.voxb h3 {
+.voxb h3,
+.faq-question {
   border-bottom: 2px solid #DBDDDA;
 }
 
@@ -255,4 +260,8 @@ div#sidebar-first div#block-block-12 .content h3 {
 
 .pane-node-content h2.pane-title {
   display: none;
+}
+
+.view-faq .views-field-title {
+  float: left;
 }
